--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans&display=swap" rel="stylesheet">
-  <title>React Goole Search App</title>
+  <title>GigFinder</title>
 </head>
 
 <body>
