--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
   <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
 
-  <title>GigFinder</title>
+  <title>Gig Finder</title>
 </head>
 
 <body>
@@ -20,6 +20,7 @@
   </noscript>
   <div id="root"></div>
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
 </body>
 
 </html>
